--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <h3 data-aos="fade-up" >Arie Septiaji, A.Md.Rad</h3>
           <p data-aos="fade-up" data-aos-delay="300"  >Putra Keempat Dari :</p>
           <span data-aos="fade-up" data-aos-delay="300" >Bapak Abdul Latief, S.Pd (Alm) dan Ibu Noviar (Almh)</span>
-          <a href="https://instagram.com/utsman520?igshid=MzNlNGNkZWQ4Mg==" data-aos="fade-up" data-aos-duration="2000" target="_blank" class="cba"><i data-feather="instagram" style="vertical-align: middle"></i> INSTAGRAM</a>
+          <a href="https://www.instagram.com/arieseptiaji" data-aos="fade-up" data-aos-duration="2000" target="_blank" class="cba"><i data-feather="instagram" style="vertical-align: middle"></i> INSTAGRAM</a>
         </div>
       </div>
     </section>
@@ -125,7 +125,7 @@
           <h3 data-aos="fade-up">Tengku Okta Malinda,S.Ak</h3>
           <p data-aos="fade-up" data-aos-delay="300">Putri Kedua Dari :</p>
           <span data-aos="fade-up" data-aos-delay="300">Bapak Tengku Iskandar dan Ibu Sri Mulyanti</span>
-          <a href="https://instagram.com/_yniivzyus?igshid=OGQ5ZDc2ODk2ZA==" data-aos="fade-up" data-aos-duration="2000" target="_blank" class="cba"><i data-feather="instagram" style="vertical-align: middle"></i> INSTAGRAM</a>
+          <a href="https://www.instagram.com/tngkumlnda" data-aos="fade-up" data-aos-duration="2000" target="_blank" class="cba"><i data-feather="instagram" style="vertical-align: middle"></i> INSTAGRAM</a>
         </div>
       </div>
     </section>
@@ -323,7 +323,7 @@
         <h1 >TerimaKasih</h1>
         <h4>Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir dan memberikan do’a restu kepada kami.</h4>
         <h4 style="margin-top: 8rem;" >KAMI YANG BERBAHAGIA</h4>
-        <h3 >Utsman <span>&</span> Yani</h3>
+        <h3 >Arie <span>&</span> Malinda</h3>
       </div>
     </section> 
     <!-- End Doa -->
