--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Lightbox -->
     <link rel="stylesheet" href="css/lightbox.css">
-    <title>The Wedding Of : Ari  &  Malinda</title>
+    <title>The Wedding Of : Arie  &  Malinda</title>
     <link rel="shortcut icon" href="images/logo.png" />
     <!-- toastr -->
     <link rel="stylesheet" href="assets/toastr/toastr.min.css">
@@ -37,7 +37,7 @@
       <div class="popup-container">
         <div class="popup-content">
           <h2 class="example1" data-aos="fade-down" data-aos-delay="800">The Wedding Of</h2>
-          <h1 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="2000">Ari <span> &</span> Malinda</h1>
+          <h1 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="2000">Arie <span> &</span> Malinda</h1>
           <h2 class="example1">Kepada Bapak/Ibu/Saudara/i</h2>
           <h2 class="example1"><span class="fw-semibold h4" id="nama"></span></h2>
           <button data-aos="fade-up" data-aos-delay="800" class="close"><i data-feather="mail" style="vertical-align: middle; "></i> Buka Undangan</button>
@@ -61,7 +61,7 @@
       </div>
       <div class="content">
         <h4>The <span> Wedding Of</span></h4>
-        <h1>Ari <span> &</span> Malinda</h1>
+        <h1>Arie <span> &</span> Malinda</h1>
         <a href=""><span>Kamis, 12 Desember 2024</span></a>
         <div class="countdown" id="countdown">
           <div class="waktu">
