--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </div>
 
               <div class="jam">
-                <p><i data-feather="clock" style="color: #000;"></i> 08.00 WIB </p>
+                <p><i data-feather="clock" style="color: #000;"></i> 08.00 WIB-Selesai </p>
                 <div class="lokasi">
                   <h5>Lokasi Acara</h5>
                   <p>Balai Nirmala, Jl.Tanah Merah, Sutera, Sukadana, Kabupaten Kayong Utara</p>
@@ -214,7 +214,7 @@
               </div>
 
               <div class="jam">
-                <p><i data-feather="clock" style="color: #000;"></i> 16.00 </p>
+                <p><i data-feather="clock" style="color: #000;"></i> 16.00-20.00 WIB </p>
                 <div class="lokasi">
                   <h5>Lokasi Acara</h5>
                   <p>Balai Nirmala, Jl.Tanah Merah, Sutera, Sukadana, Kabupaten Kayong Utara</p>
