--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="The Wedding OF : Utsman & Yani">
-    <meta property="og:description" content="Minggu, 30 Juli 2023">
+    <meta property="og:title" content="The Wedding OF : Arie & Malinda">
+    <meta property="og:description" content="Kamis, 12 Desember 2024">
     <meta property="og:image" content="https://i.ibb.co/p2xrqXN/Utsman.png">
-    <meta property="og:url" content="https://masreyxlvi.github.io/Utsman-Yani/">
     <meta property="og:type" content="website">
 
     <!-- my fonts -->
