--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="The Wedding OF : Arie & Malinda">
     <meta property="og:description" content="Kamis, 12 Desember 2024">
-    <meta property="og:image" content="https://i.ibb.co.com/y0cFgk0/IMG-9193.jpg">
+    <meta property="og:image" content="https://i.ibb.co.com/tBZcXDC/hero2.jpg">
     <meta property="og:type" content="website">
 
     <!-- my fonts -->
